tests/ui/unsafe/foreign-unsafe-fn-called.stderr
error[E0133]: call to unsafe function `test::free` is unsafe and requires unsafe function or block
  --> $DIR/foreign-unsafe-fn-called.rs:8:5
   |
LL |     test::free();
   |     ^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
